--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
     <string name="app_name">mapping</string>
-    <string name="convertBtn">go</string>
+    <string name="searchBtn">Search</string>
+    <string name="latitude">Latitude</string>
+    <string name="longitude">Longitude</string>
 
     </resources>
