--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="searchBtn">Search</string>
     <string name="latitude">Latitude</string>
     <string name="longitude">Longitude</string>
+    <string name="chooseMap">Choose Map</string>
 
     </resources>
